...
    
    var body: some View {
        ZStack(alignment: .bottom) {
            VStack(spacing: 0) {
                // Custom header instead of navigation title
                HStack {
                    Text("Search")
                        .font(.interBold(size: 18))
                        .foregroundColor(Color.appSmokyBlack)
                    Spacer()
                    Button(action: {
                        appState.shouldShowOnboarding = true
                    }) {
...
